fix(templates): fix template errors and data structure
- Fix locations data structure to match template expectations
- Update locations.yaml with correct address and hours format
- Fix language switcher to use AllTranslations
- Add null checks in header, footer, and location-card partials
- Fix hugo.yaml privacy config (twitter -> x)
- Site now builds successfully

Refs: Multiple tasks

--- a/pause-urbaine-website/layouts/partials/header.html
+++ b/pause-urbaine-website/layouts/partials/header.html
@@ -5,13 +5,17 @@
       <div class="header-locations">
         {{ range .Site.Data.locations }}
         <div class="header-location">
-          <span>{{ index .name $.Site.Language.Lang }}</span>
+          <span>{{ if .name }}{{ index .name $.Site.Language.Lang }}{{ end }}</span>
+          {{ if .phone }}
           <a href="tel:{{ .phone }}">
             <i class="fa-solid fa-phone"></i> {{ .phone }}
           </a>
+          {{ end }}
+          {{ if .instagram }}
           <a href="{{ .instagram }}" target="_blank" rel="noopener">
             <i class="fa-brands fa-instagram"></i>
           </a>
+          {{ end }}
         </div>
         {{ end }}
       </div>
