--- a/pause-urbaine-website/assets/scss/main.scss
+++ b/pause-urbaine-website/assets/scss/main.scss
@@ -44,6 +44,16 @@ img {
   height: auto;
 }
 
+// Lazy loading images
+img[data-src] {
+  opacity: 0;
+  transition: opacity 0.3s ease-in;
+}
+
+img.loaded {
+  opacity: 1;
+}
+
 // Utility classes
 .text-center {
   text-align: center;
