--- a/pause-urbaine-website/layouts/_default/baseof.html
+++ b/pause-urbaine-website/layouts/_default/baseof.html
@@ -19,6 +19,55 @@
   
   <title>{{ .Title }} | {{ .Site.Title }}</title>
   
+  {{- /* Structured Data - LocalBusiness */ -}}
+  {{ if .IsHome }}
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "HairSalon",
+    "name": "Pause Urbaine",
+    "url": "{{ .Site.BaseURL }}",
+    "logo": "{{ .Site.BaseURL }}images/logo.png",
+    "description": "{{ .Site.Params.description }}",
+    "telephone": "022 310 4081",
+    "priceRange": "$$",
+    "location": [
+      {{ range $index, $location := .Site.Data.locations }}
+      {{ if $index }},{{ end }}
+      {
+        "@type": "Place",
+        "name": "{{ index $location.name "fr" }}",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "{{ index $location.address "fr" }}",
+          "addressLocality": "Genève",
+          "addressCountry": "CH"
+        },
+        "telephone": "{{ $location.phone }}"
+      }
+      {{ end }}
+    ],
+    "openingHoursSpecification": [
+      {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": ["Tuesday", "Wednesday", "Thursday", "Friday"],
+        "opens": "10:00",
+        "closes": "18:00"
+      },
+      {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": "Saturday",
+        "opens": "10:00",
+        "closes": "17:00"
+      }
+    ],
+    "sameAs": [
+      "https://www.instagram.com/pauseurbaine/"
+    ]
+  }
+  </script>
+  {{ end }}
+  
   {{- /* SCSS stylesheet with Hugo Pipes */ -}}
   {{ $style := resources.Get "scss/main.scss" | toCSS | minify | fingerprint }}
   <link rel="stylesheet" href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}">
