--- a/pause-urbaine-website/layouts/partials/footer.html
+++ b/pause-urbaine-website/layouts/partials/footer.html
@@ -36,7 +36,7 @@
     </div>
     
     <div class="footer-copyright">
-      <p>&copy; {{ now.Year }} Pause Urbaine. {{ i18n "allRightsReserved" }}</p>
+      <p>&copy; {{ now.Year }} Pause Urbaine. {{ i18n "footer.copyright" }}</p>
     </div>
   </div>
 </footer>
