--- a/pause-urbaine-website/assets/scss/main.scss
+++ b/pause-urbaine-website/assets/scss/main.scss
@@ -13,7 +13,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: $font-family;
+  font-family: $font-family-base;
   font-size: $font-size-base;
   line-height: $line-height-base;
   color: $text-color;
@@ -23,6 +23,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   line-height: 1.2;
+  font-family: $font-family-heading;
 }
 
 h1 { font-size: $font-size-h1; }
