--- a/pause-urbaine-website/layouts/_default/baseof.html
+++ b/pause-urbaine-website/layouts/_default/baseof.html
@@ -9,9 +9,10 @@
   <link rel="canonical" href="{{ .Permalink }}">
   
   {{- /* Multilingual SEO tags */ -}}
-  {{ range .AllTranslations }}
-  <link rel="alternate" hreflang="{{ .Lang }}" href="{{ .Permalink }}">
+  {{ range .Translations }}
+  <link rel="alternate" hreflang="{{ .Language.Lang }}" href="{{ .Permalink }}">
   {{ end }}
+  <link rel="alternate" hreflang="x-default" href="{{ .Site.BaseURL }}">
   
   {{- /* Open Graph meta tags */ -}}
   <meta property="og:title" content="{{ .Title }}">
@@ -19,6 +20,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="{{ .Permalink }}">
   <meta property="og:site_name" content="{{ .Site.Title }}">
+  <meta property="og:locale" content="{{ .Language.Lang }}">
   
   <title>{{ .Title }} | {{ .Site.Title }}</title>
   
